- swagger updated: find by date
